--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Open+Sans:wght@400;700&display=swap");
 
 * {
@@ -7,6 +11,8 @@
 body {
   font-family: "Open Sans", "Lato", sans-serif;
   padding: 0;
+  background: gray;
+  color: white;
 }
 
 h1,
